--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,13 @@ $black: rgba(24, 30, 75, 1);
 $black2: rgba(94, 98, 130, 1);
 $white: rgba(255, 255, 255, 1);
 $shadow: rgba(68, 117, 242, 0.21);
+$kulrang: rgba(104, 109, 119, 1);
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: $plus;
 }
@@ -56,6 +62,13 @@ ul {
     font-size: 12px;
     font-weight: 400;
     line-height: 15.12px;
+  }
+  .in {
+    position: relative;
+  }
+  .search {
+    position: absolute;
+    left: 100px;
   }
   .inter {
     display: flex;
@@ -135,6 +148,7 @@ ul {
   }
 }
 .main__container {
+  display: flex;
   .explore {
     margin-top: 72px;
     margin-left: 120px;
@@ -187,5 +201,50 @@ ul {
     margin-left: 120px;
     margin-top: 34px;
     box-shadow: 0px 20px 35px 0px $shadow;
+    cursor: pointer;
+    transition: all 0.5s;
+    &:hover {
+      background-color: $kok;
+      color: $black;
+    }
   }
+  .ellipse {
+    // position: absolute;
+    display: flex;
+    width: 50px;
+    height: 50px;
+    background-color: $white;
+    border: 1px solid $blue;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    cursor: pointer;
+    box-shadow: 0px 15px 20px 0px $shadow;
+    margin-left: 41px;
+    margin-right: 16px;
+    transition: all 0.5s;
+    &:hover {
+      background-color: $blue2;
+    }
+  }
+  h4 {
+    font-size: 17px;
+    font-weight: 700;
+    line-height: 21.42px;
+    color: $kulrang;
+  }
+  .putar {
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+  .photo {
+    margin-top: 20px;
+  }
+}
+.logo__container {
+  display: flex;
+  gap: 85px;
+  align-items: center;
 }
