--- a/scss/header.scss
+++ b/scss/header.scss
@@ -92,3 +92,113 @@ $blue: rgba(68, 117, 242, 1);
     }
   }
 }
+@media screen and (max-width: 1250px) {
+  .header__container {
+    margin-top: 10px;
+
+    .logo {
+      margin-left: 80px;
+
+      span {
+        font-size: 16px;
+      }
+    }
+
+    input {
+      width: 430px;
+    }
+  }
+  .location {
+    gap: 8px;
+    margin-left: 20px;
+
+    .locate {
+      p {
+        line-height: 10.12px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 1100px) {
+  .header__container {
+    margin-top: 10px;
+
+    .logo {
+      margin-left: 80px;
+
+      span {
+        font-size: 16px;
+      }
+    }
+
+    input {
+      width: 430px;
+    }
+  }
+  .location {
+    gap: 8px;
+    margin-left: 20px;
+
+    .locate {
+      p {
+        line-height: 10.12px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 968px) {
+  .header__container {
+    margin-top: 10px;
+
+    .logo {
+      margin-left: 80px;
+
+      span {
+        font-size: 16px;
+      }
+    }
+
+    input {
+      width: 430px;
+    }
+  }
+  .location {
+    gap: 8px;
+    margin-left: 20px;
+
+    .locate {
+      p {
+        line-height: 10.12px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 768px) {
+  .header__container {
+    .logo {
+      margin-left: 50px;
+
+      span {
+        font-size: 12px;
+        line-height: 14.68px;
+      }
+    }
+
+    input {
+      width: 380px;
+    }
+
+    .inter {
+      margin-left: 20px;
+    }
+
+    .locate {
+      p {
+        font-size: 10px;
+      }
+      h5 {
+        font-size: 10px;
+      }
+    }
+  }
+}
