--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,7 +22,7 @@ $kulrang: rgba(104, 109, 119, 1);
   box-sizing: border-box;
 }
 body {
-  font-family: $plus;
+  font-family: "Plus Jakarta Sans";
 }
 .container {
   max-width: 1440px;
@@ -45,158 +45,12 @@ ul {
   border: 1px solid rgba(223, 223, 224, 1);
 }
 
-.nav__container {
-  display: flex;
-  align-items: center;
-  img {
-    cursor: pointer;
-  }
-  .nav__list {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin-left: 125px;
-    margin-top: 30px;
-    gap: 40px;
-    .li {
-      display: flex;
-      text-align: center;
-      align-items: center;
-      gap: 8px;
-      cursor: pointer;
-    }
-    a {
-      font-size: 14px;
-      font-weight: 400;
-      // line-height: 17.64px;
-      color: $gray;
-    }
-  }
-  .right__nav {
-    display: flex;
-    margin-left: 13%;
-    gap: 8px;
-    align-items: center;
-    margin-top: 10px;
-  }
-}
-.main__container {
-  display: flex;
-  .explore {
-    margin-top: 72px;
-    margin-left: 120px;
-    width: 299px;
-    height: 36px;
-    border-radius: 39px;
-    display: flex;
-    align-items: center;
-    background-color: $blue2;
-    padding: 8px 1px 10px 20px;
-    h4 {
-      font-size: 14px;
-      font-weight: 700;
-      line-height: 17.64px;
-      color: $kok;
-    }
-  }
-  h2 {
-    max-width: 685px;
-    font-size: 76px;
-    font-weight: 800;
-    line-height: 89px;
-    letter-spacing: -0.04em;
-    color: $black;
-    margin-left: 122px;
-    margin-top: 22px;
-    span {
-      color: $kok;
-    }
-  }
-  p {
-    max-width: 477px;
-    margin-left: 120px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 30px;
-    margin-top: 30px;
-    color: $black2;
-  }
-  button {
-    width: 198px;
-    height: 60px;
-    border: none;
-    border-radius: 10px;
-    background-color: $blue;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 20.16px;
-    color: $white;
-    margin-left: 120px;
-    margin-top: 34px;
-    box-shadow: 0px 20px 35px 0px $shadow;
-    cursor: pointer;
-    transition: all 0.5s;
-    &:hover {
-      background-color: $kok;
-      color: $black;
-    }
-  }
-  .ellipse {
-    // position: absolute;
-    display: flex;
-    width: 50px;
-    position: relative;
-    height: 50px;
-    background-color: $white;
-    border: 1px solid $blue;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    padding: 12px;
-    cursor: pointer;
-    box-shadow: 0px 15px 20px 0px $shadow;
-    margin-left: 41px;
-    margin-right: 16px;
-    transition: all 0.5s;
-    &:hover {
-      background-color: $blue2;
-    }
-  }
-  h4 {
-    font-size: 17px;
-    font-weight: 700;
-    line-height: 21.42px;
-    color: $kulrang;
-  }
-  .putar {
-    display: flex;
-    align-items: center;
-  }
-  .photo {
-    margin-top: 20px;
-  }
-}
-.logo__container {
-  display: flex;
-  align-items: center;
-  .logos {
-    display: flex;
-    align-items: center;
-    gap: 85px;
-    margin-left: 125px;
-  }
-  .logos1 {
-    display: flex;
-    align-items: center;
-    gap: 85px;
-  }
-}
-
 @media screen and (max-width: 1250px) {
   .container {
     max-width: 1020px;
   }
 }
+
 @media screen and (max-width: 1100px) {
   .container {
     max-width: 968px;
@@ -212,6 +66,7 @@ ul {
     max-width: 540px;
   }
 }
+
 @media screen and (max-width: 540px) {
   .container {
     max-width: 400px;
